static/css/style.css
/* backgrounds and images */

.callout-background {
    height: 80vh;
    background: url(../images/people_training.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.callout-bg-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(41, 44, 121, 0.7);
}

/* text */

#callout-header {
    color: azure;
    font-weight: 200;
    font-size: 3rem;
    margin-top: 12vh;
}

.callout-text {
    color: azure;
    font-weight: 100;
    margin-top: 6vh;
    margin-bottom: 6vh;
}

.navbar-logo {
    color: rgba(71, 75, 189, 1) !important;
}

.navbar-links {
    color: rgba(71, 75, 189, 1) !important;
}

#rating {
    color: rgba(71, 75, 189, 1);
    margin-top: 2vh;
    font-size: 1.3em;
}

#review-header {
    color: rgba(71, 75, 189, 1);
    margin-top: 0;
}

.form-header {
    font-size: 3.5rem;
}

#search-exercises-label {
    color: white;
}

.blue-header {
    color: rgba(41, 44, 121, 1);
}

/* forms */

.hidden_exercise {
    display: none;
}

/* tabs */

.tabs {
    display:-webkit-flex;
    display: -ms-flexbox;
    display: flex;
    color: #e65100;
    
}

#tab-row { 
    margin-top: 2vh;
}

/* margins and padding */

.add-finisher-paragraph {
    padding: 0 .75rem;
}

.push-down {
    margin-top: 3.5vh;
}

#footer {
    height: 5vh;
}

.push-in {
    margin-left: 5%;
    margin-right: 5%;
}

/* cards */

.card {
    border-radius: 20px;
}

.card .card-action:last-child {
    border-radius: 0 0 20px 20px;
    display: flex;
    justify-content: space-around;
}

.card-title {
    color: rgba(71, 75, 189, 1);
}

.card-action {
    background-color: #e65100 !important;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
    color: white;
    margin-right: 24px;
    -webkit-transition: color .3s ease;
    transition: color .3s ease;
    text-transform: uppercase;
}

#sign-up-button {
    background-color: #e65100;
    border-radius: 10px;
}

/* Footer */

#footer-row {
    margin-bottom: 0;
}

.footer-links {
    margin-bottom: 0;
    color: rgba(71, 75, 189, 1);
}

.page-footer {
    margin-top: 3.5vh;
}

/* review and prompt cards */

.card-panel {
    border-radius: 10px;
    color: white;
    background-color: rgba(41, 44, 121, 1) !important;
}

.fa-question-circle {
    color: rgba(41, 44, 121, 1);
}

.row .empty-library {
  float: none !important;
  margin-left: auto;
  margin-right: auto;
}


/* action buttons */

.orange-btn {
    background-color: #e65100;
    border-radius: 10px;
}

.orange-btn:hover {
    background-color: #e48c59;
    border-radius: 10px;
}


/* media queries */

@media only screen and (max-height: 568px) {

    .callout-background {
    height: 100vh;
    }
}

/* lock to portait on mobile */

@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
  html {
    transform: rotate(-90deg);
    transform-origin: left top;
    width: 100vh;
    overflow-x: hidden;
    position: absolute;
    top: 100%;
    left: 0;
  }
}

